cmake_minimum_required(VERSION 2.8)
project(NESEmulator)

if (EMSCRIPTEN)
    set(GAME_FILENAME "game.nes")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEMSCRIPTEN_BUILD -std=c++11 -s USE_SDL=2 -s USE_PTHREADS=1 -O3")
    set(CMAKE_EXECUTABLE_SUFFIX ".bc")
else()
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${NESEmulator_SOURCE_DIR}/cmake")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
    find_package(SDL2 REQUIRED)
    include_directories(${SDL2_INCLUDE_DIR})
endif()

set(SOURCE_FILES main.cpp src/Emulator.cpp include/Emulator.h src/Memory.cpp include/Memory.h include/Common.h src/CPU.cpp include/CPU.h src/ROM.cpp include/ROM.h src/PPU.cpp include/PPU.h src/Controller.cpp include/Controller.h include/IMapper.h src/Mapper000.cpp include/Mapper000.h src/Mapper004.cpp include/Mapper004.h src/Console.cpp include/Console.h)
add_executable(NESEmulator ${SOURCE_FILES})

if (EMSCRIPTEN)
    message("Creating HTML file, please copy index.* and pthread-main.js files to your server root dir")
    execute_process(COMMAND "${CMAKE_CXX_COMPILER} -O3 -o index.html --preload-file ../${GAME_FILENAME}@game.nes NESEmulator.bc -s USE_SDL=2 -s USE_PTHREADS=1")
else()
    target_link_libraries(NESEmulator ${SDL2_LIBRARY})
endif()